# Final_OSM_Navigation

./: BuildLibREADME.md  README.md  backward_control.sh  frames.gv  lqr_test_record.sh  navigation.sh  online.sh  park_planner.sh  perception_record.sh  planning_record.sh  planning_simulation.sh  rosbag_record.sh  simulation.sh  simulation_with_osm.sh
common/configs/: CMakeLists.txt  package.xml
common/configs/common/: common_params.yaml
common/configs/control/: control_params.yaml
common/configs/localization/lidar_localization/: lidar_localization.yaml
common/configs/localization/localization/: localization.yaml
common/configs/perception/: perception_params.yaml
common/configs/planning/: planning_params.yaml
common/cyber_msgs/: CMakeLists.txt  package.xml
common/cyber_msgs/msg/: CanFrame.msg  CommunicationHeart.msg  EsrObj.msg  EsrObjMultiArray.msg  GPGGA_MSG.msg  Heading.msg  JY901.msg  LaneSegement.msg  LaneWaypoint.msg  LinkAngle.msg  LocalTrajList.msg  LocalTrajPoint.msg  LocalizationEstimate.msg  Object.msg  OccupancyIndex.msg  OccupancyIndexArray.msg  TractorTrailerState.msg  TripInfo.msg  VehicleBrakeFeedback.msg  VehicleSpeedFeedback.msg  VehicleState.msg  VehicleSteerFeedback.msg
common/math/: CMakeLists.txt  aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  angle.cc  angle.h  box2d.cc  box2d.h  cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  curve_fitting.h  euler_angles_zxy.h  factorial.h  hermite_spline.h  integral.cc  integral.h  kalman_filter.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  math_utils.cc  math_utils.h  matrix_operations.cc  matrix_operations.h  mpc_osqp.cc  mpc_osqp.h  package.xml  path_matcher.cc  path_matcher.h  polygon2d.cc  polygon2d.h  pose2d.cc  pose2d.h  quaternion.h  search.cc  search.h  sin_table.cc  (+3 more)
common/math/filters/: CMakeLists.txt  digital_filter.cc  digital_filter.h  digital_filter_coefficients.cc  digital_filter_coefficients.h  mean_filter.cc  mean_filter.h
common/math/qp_solver/: CMakeLists.txt  qp_solver.cc  qp_solver.h
common/utils/DSTAR/dstar/: CMakeLists.txt  README.md  package.xml
common/utils/DSTAR/dstar_map/: CMakeLists.txt  README.md  package.xml
common/utils/RRT/: CMakeLists.txt  package.xml
common/utils/RRT/include/: TrajectoryCombiner.h  task_param.h
common/utils/RRT/launch/: all_rrt.launch
common/utils/RRT/src/: GridMapDilate.cpp  TrajectoryCombiner.cpp  contine_rrt_main.cpp  continue_rrt.cpp  continue_rrt_choose.cpp  continue_rrt_choose_main.cpp  main.cpp  rrt.cpp  rrt_choose.cpp  rrt_choose_main.cpp
control/local_steer_controll/: CMakeLists.txt  package.xml
control/local_steer_controll/launch/: local_pure_pursuit.launch
control/local_steer_controll/params/: control_params.yaml
control/local_steer_controll/src/: local_pure_pursuit.cpp  local_pure_pursuit.h
driver/nmea_navsat_driver/: README.md  Sinan-M600g-mini_command_LTY.txt  package.xml
driver/nmea_navsat_driver/launch/: strong_gps.launch
driver/nmea_navsat_driver/scripts/: nmea_serial_driver
driver/nmea_navsat_driver/src/libnmea_navsat_driver/: checksum_utils.py  driver.py  parser.py
localization/cyber_tf/: CMakeLists.txt  README.md  package.xml
localization/cyber_tf/launch/: cyber_tf.launch
localization/cyber_tf/script/: tf_car.py  tf_test.py
localization/cyber_tf/src/: main.cpp
localization/local_localization/: CMakeLists.txt  README.md  package.xml
localization/local_localization/launch/: local_fusion.launch
localization/local_localization/rviz/: fusion.rviz
localization/local_localization/src/: main.cpp  top.cpp  top.h
localization/localization/: CMakeLists.txt  package.xml
localization/localization/launch/: imu_fusion.launch
localization/localization/rviz/: fusion.rviz  localization.rviz
localization/localization/src/: main.cpp  top.cpp  top.h
perception_all/collision_detection/: CMakeLists.txt  package.xml
perception_all/collision_detection/config/: collision_detection_params.yaml
perception_all/collision_detection/include/: grid_map.h  lidar_preprocess.h  node.h
perception_all/collision_detection/launch/: debug.launch  run.launch
perception_all/collision_detection/rviz/: run.rviz
perception_all/collision_detection/src/: grid_map.cpp  lidar_preprocess.cpp  node.cpp
perception_all/lidar_perception/: CMakeLists.txt  README.md  package.xml
perception_all/lidar_perception/config/: perception_params.yaml
perception_all/lidar_perception/include/: near_safe.h  node.h
perception_all/lidar_perception/launch/: near_safe.launch  perception.launch
perception_all/lidar_perception/src/: near_safe.cpp  node.cpp
planning/: CMakeLists.txt  README.md  package.xml
planning/launch/: planning.launch
planning/src/: main.cpp  planning.cpp  planning.h
planning/src/manager/: grid_map_manager.cpp  grid_map_manager.h  osm_map_manager.cpp  osm_map_manager.h  osm_route_manager.cpp  osm_route_manager.h  publisher_manager.cpp  publisher_manager.h  self_state_manager.cpp  self_state_manager.h
planning/src/parameter/: BehaviorParam.h  GridMapParam.h  MapParam.h  Parameter.h  SpeedGenParam.h  tiggo_model.h
planning/src/planner/: dubins_curve.cpp  dubins_curve.h  dubins_planner.cpp  dubins_planner.h  dubins_test_main.cpp  planner.h  planner_factory.cpp  planner_factory.h
planning/src/state/: StBase.h  StNavigation.cc  StNavigation.h  StPause.cpp  StPause.h  StRun.cc  StRun.h  StStart.cc  StStart.h  StWaitForRun.cpp  StWaitForRun.h  events.hpp  state_common.h
visualization/grid_map_vis/: CMakeLists.txt  package.xml
visualization/grid_map_vis/launch/: run.launch
visualization/grid_map_vis/src/: main.cpp
visualization/lidar_visualize/: CMakeLists.txt  package.xml
visualization/lidar_visualize/include/: global_visualize.h
visualization/lidar_visualize/launch/: all_display.launch  near_safe.launch  points_display.launch
visualization/lidar_visualize/rviz/: global_visualize.rviz  near_safe.rviz  points_display.rviz
visualization/lidar_visualize/src/: global_visualize.cpp
(+448 files in other folders)
