<package format="2">
  <name>local_steer_controller</name>
  <version>0.0.1</version>
  <description>
    Example nodes to show how to set up publishers and subscribers while
    using the parameter server and dynamic reconfigure and custom messages.
    Examples for Python and C++.
  </description>
  <author>wenglihong</author>
  <maintainer email="wengge987@163.com">wenglihong</maintainer>
  <license>BSD</license>
  <url>https://github.com/tdenewiler/node_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cyber_msgs</depend>
  <depend>tf</depend>
 
</package>
